# FT8Transceiver

./: .gitignore  CMakeLists.txt  README.md
JTEncode/: Cmakelists.txt  JTEncode.h  init_rs_int.cpp
si5351a/: Cmakelists.txt  i2c.cpp  i2c.h  si5351.cpp  si5351.h
